Version 2.1.4-dev
16-12-2014

[Feature] - Added command 'update' and remove auto update package lists.
          - Added slpkg update itself.

[Updated] - Fix 'UnboundLocalError: local variable 'md5' referenced before assignment'
            after try update alien repository in some packages and for Slackware current
            users. Thanks to 'Jack Kiersey' for reporting.

Version 2.1.3-dev
06-12-2014

[Updated] - Fix 'IndexError: tuple index out of range' when sbo upgrade.


Version 2.1.2-dev
04-12-2014

[Feature] - Added checksum all repositories.

[Updated] - Fix downloads modules.

Version 2.1.1-dev
01-12-2014

[Feature] - Added options in /etc/slpkg/slpkg.conf file to select
            repositories.
          - Added options to skip unsupported and untested packages.

[Updated] - Bugfix TypeError for unsupported/untested sbo packages.

Version 2.1.0
28-11-2014

[Updated] - Fix change build path.
          - Fix creating directories if not exists.
          - Added Studioware repository.

Version 2.0.9
26-11-2014

[Updated] - Fix setup.py to install configuration files after checksum.
          - Fix view slpkg config file.

Version 2.0.8
25-11-2014

[Updated] - Added more options in slpkg configuration file.

Version 2.0.7
22-11-2014

[Feature] - Added more option in slpkg.conf file.
          - Added slackware-mirrors file in /etc/slpkg

[Updated] - Fix upgrade Slackware packages if installed.

Version 2.0.6
18-11-2014

[Updated] - Fix setup.py file

Version 2.0.5
18-11-2014

[Feature] - Added /etc/slpkg.conf file.
          - Move "--current" switch in /etc/slpkg.conf file.
          - Added local PACKAGES.TXT for Slackware repository.
          - Added options to view package description.
          - Added all repositories in tracking dependencies options '-t'.
          - Added configuration file managment

[Updated] - Bugfix upgrading binary packages.

Version 2.0.4
07-11-2014

[Feature] - Added Robby Workman, Alien Bob (Eric Hameleers) and